--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,36 +5,51 @@ body{
 main{
     width: 80%;
     margin: 0 auto;  /* midstiller */
-    border: solid black 1px;  
 }
 
 main > h1{
     font-size: 98px;
     justify-content: center;  /* midstiller */
+    text-decoration: underline;
 }
 
 main > article{
-    width: 90%;
-    background-color: burlywood;
+    margin: 10px 10px 0 10px;
 }
 
-div > .bilde{
+article > .tekst{
+    width: 70%;
+    float: left;
+}
+
+article > .bilde{
+    left: 0;
     width: 200px;
     height: 200px;
     position: relative;  /*plasserer alt som er inn i diven, relativ til diven */
     display: inline-block;
     overflow: hidden; /*fjrerner det som kommer utenfor diven */
     margin: 0;
+    background-color: tomato;
+  }
+
+  article > .bilde > p{
+    text-align: center;
   }
   
-  div > .bilde > img {
+ /* article > .bilde > img {
     display: block;
     position: absolute;
     height: auto;
     width: 100%;
-
-    /* for å midstille bilde */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }*/
+
+  article > .bilde > img {
+    display: block;
+    height: auto;
+    width: 100%;
   }
+
